fixed link on projects, changed background on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -392,8 +392,10 @@ Responsive Design
 		display: none;
 	}
 
-	#blogbox{
+	.blogbox{
 		width: 100%;
+		border: none;
+		padding: 0;
 	}
 	header h1 {
 		font-size: 72px;
@@ -405,8 +407,12 @@ Responsive Design
 
 	#giantbuttons ul li{
 		width: 250px;
+		border: 4px solid #b03476;
 	}
 
+	#innerwrapper{
+		background: white;
+	}
 }
 
 @media screen and (min-width: 700px) {
